--- a/public/css/main.css
+++ b/public/css/main.css
@@ -329,3 +329,21 @@ footer {
     background-color: white;
     color: black;
 }
+
+.contact-icon {
+    width: 20px;
+    height: auto;
+}
+
+@media (max-width: 576px) {
+    .contact-icon {
+        width: 16px;
+    }
+    .fas {
+        font-size: 16px;
+    }
+}
+p.lead {
+    font-size: 1.2rem;
+    color: #6c757d;
+}
